flux/infrastructure/observability/opentelemetry-collector/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: otel-basic-collector
    namespace: observability
spec:
    parentRefs:
        - name: tls-gateway
          namespace: kube-system
    hostnames:
        - "basic-collector.otel.axiom.lucasfehres.nl"
    rules:
        - matches:
              - path:
                    type: PathPrefix
                    value: /
          backendRefs:
              - name: basic-collector-collector
                port: 4318
